enhance modules